--- a/backend/package.json
+++ b/backend/package.json
@@ -10,9 +10,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "basic-auth": "^2.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "express": "^4.21.1",
+    "express": "^4.21.2",
+    "ip": "^2.0.1",
+    "ip-range-check": "^0.2.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.3",
     "socket.io": "^4.8.1",
     "ws": "^8.18.0"
