Implement user authentication with JWT; add login and registration routes, update environment variables, and enhance user model with password hashing

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
-ALLOWED_IPS=192.168.2.0/24,193.253.212.56/32
+ALLOWED_IPS= 87.106.130.160/32,193.253.212.56/32
 BASIC_AUTH_USERNAME=admin
 BASIC_AUTH_PASSWORD=admin
+JWT_SECRET=ta_clé_secrète
