--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,15 +7,18 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "core-js": "^3.39.0",
+    "jwt-decode": "^3.1.2",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.3",
     "regenerator-runtime": "^0.14.1",
+    "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.8.1",
-    "web-vitals": "^2.1.4",
-    "jwt-decode": "^3.1.2"
+    "swiper": "^11.1.15",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
