--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,11 +1,11 @@
 {
-  "name": "Tv Pannel",
-  "short_name": "Pannel",
+  "name": "Tv Panel",
+  "short_name": "Panel",
   "start_url": ".",
   "display": "standalone",
   "background_color": "#f4f4f4",
   "theme_color": "#f4f4f4",
-  "description": "Tv Pannel",
+  "description": "Tv Panel",
   "icons": [
     {
       "src": "icons/icon-192x192.png",
