--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,10 +6,12 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "chart.js": "^4.4.7",
     "core-js": "^3.39.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
