temp commit (not work completely)

--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,6 @@ ALLOWED_IPS= 87.106.130.160/32,193.253.212.56/32
 BASIC_AUTH_USERNAME=admin
 BASIC_AUTH_PASSWORD=admin
 JWT_SECRET=ta_clé_secrète
+
+WC_CONSUMER_KEY=ck_a78530fd840464be7213118daccd9f629d23277e
+WC_CONSUMER_SECRET=cs_2b9186f6fc395de4d2853293cfcdebdebe2af8c9
