--- a/backend/package.json
+++ b/backend/package.json
@@ -10,15 +10,19 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.7.9",
     "basic-auth": "^2.0.1",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "http": "^0.0.1-security",
     "ip": "^2.0.1",
     "ip-range-check": "^0.2.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.8.3",
+    "mongoose": "^8.9.3",
+    "node-cron": "^3.0.3",
+    "sequelize": "^6.37.5",
     "socket.io": "^4.8.1",
     "ws": "^8.18.0"
   }
