--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.9",
     "basic-auth": "^2.0.1",
     "bcrypt": "^5.1.1",
+    "chrono-node": "^2.7.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
